--- a/static/style.css
+++ b/static/style.css
@@ -1,27 +1,19 @@
-.container {
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-    font-family: Arial, sans-serif;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h1 {
-    color: #333;
-    text-align: center;
+body, html {
+    width: 100%;
+    height: 100%;
 }
 
-#visitor-info {
-    background-color: #f5f5f5;
-    padding: 20px;
-    border-radius: 5px;
-    margin-top: 20px;
-}
-
-#visitor-info p {
-    margin: 10px 0;
-}
-
-#visitor-info span {
-    font-weight: bold;
-    color: #0066cc;
+.pink-background {
+    width: 100%;
+    height: 100%;
+    background-color: pink;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
